# pitch_analyzer_api

./: README.md  pyproject.toml
detect/: detect_pitch.py
handlers/: analyze_pitch.py
server/: main.py
